{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 219,
  "lineage": "8fc9a60b-8add-77e1-3055-2ca2b505fb1a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052f570786c0884fb",
            "arn": "arn:aws:ec2:eu-central-1:013372624309:elastic-ip/eipalloc-052f570786c0884fb",
            "domain": "vpc",
            "id": "eipalloc-052f570786c0884fb",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-127-104-182.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.104.182",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_eip_1webseeker"
            },
            "tags_all": {
              "Name": "nat_eip_1webseeker"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d395be40fccc1de",
            "arn": "arn:aws:ec2:eu-central-1:013372624309:instance/i-0a49fa0d5f327c068",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a49fa0d5f327c068",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webseeker_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01cd8ac617ea267c6",
            "private_dns": "ip-10-0-2-89.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f60415e4a23b56f9",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0dc10267d70a02b39"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0025f49805a52b2cb",
            "tags": {
              "Name": "private_instance_1webseeker"
            },
            "tags_all": {
              "Name": "private_instance_1webseeker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc10267d70a02b39"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.webseeker_sg",
            "aws_subnet.private_subnet_1webseeker",
            "aws_vpc.vpc_1webseeker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d395be40fccc1de",
            "arn": "arn:aws:ec2:eu-central-1:013372624309:instance/i-0c455e647f7ec1e22",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c455e647f7ec1e22",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webseeker_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d2853b707566dbcd",
            "private_dns": "ip-10-0-1-207.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.207",
            "public_dns": "ec2-3-64-149-218.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.64.149.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05ac64c5966430bb5",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0dc10267d70a02b39"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c193bf4703adc2d",
            "tags": {
              "Name": "public_instance_1webseeker"
            },
            "tags_all": {
              "Name": "public_instance_1webseeker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc10267d70a02b39"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.webseeker_sg",
            "aws_subnet.public_subnet_1webseeker",
            "aws_vpc.vpc_1webseeker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013372624309:internet-gateway/igw-0fe4e51d8235c4982",
            "id": "igw-0fe4e51d8235c4982",
            "owner_id": "013372624309",
            "tags": {
              "Name": "igw_1webseeker"
            },
            "tags_all": {
              "Name": "igw_1webseeker"
            },
            "vpc_id": "vpc-0ce90b2d355814169"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_1webseeker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052f570786c0884fb",
            "association_id": "eipassoc-0a43460a9a7b91341",
            "connectivity_type": "public",
            "id": "nat-05089182d5de51c68",
            "network_interface_id": "eni-0f8df5f1fb662f767",
            "private_ip": "10.0.1.171",
            "public_ip": "3.127.104.182",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00c193bf4703adc2d",
            "tags": {
              "Name": "nat_1webseeker"
            },
            "tags_all": {
              "Name": "nat_1webseeker"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1webseeker",
            "aws_subnet.public_subnet_1webseeker",
            "aws_vpc.vpc_1webseeker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013372624309:route-table/rtb-0c2998e3e83cc1e95",
            "id": "rtb-0c2998e3e83cc1e95",
            "owner_id": "013372624309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05089182d5de51c68",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt_1webseeker"
            },
            "tags_all": {
              "Name": "private_rt_1webseeker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce90b2d355814169"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1webseeker",
            "aws_nat_gateway.nat_1webseeker",
            "aws_subnet.public_subnet_1webseeker",
            "aws_vpc.vpc_1webseeker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013372624309:route-table/rtb-022a040b15f01a888",
            "id": "rtb-022a040b15f01a888",
            "owner_id": "013372624309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe4e51d8235c4982",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt_1webseeker"
            },
            "tags_all": {
              "Name": "public_rt_1webseeker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce90b2d355814169"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_1webseeker",
            "aws_vpc.vpc_1webseeker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f402683e40059dfc",
            "route_table_id": "rtb-0c2998e3e83cc1e95",
            "subnet_id": "subnet-0025f49805a52b2cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1webseeker",
            "aws_nat_gateway.nat_1webseeker",
            "aws_route_table.private_rt_1webseeker",
            "aws_subnet.private_subnet_1webseeker",
            "aws_subnet.public_subnet_1webseeker",
            "aws_vpc.vpc_1webseeker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4a5688003da18fa",
            "route_table_id": "rtb-022a040b15f01a888",
            "subnet_id": "subnet-00c193bf4703adc2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_1webseeker",
            "aws_route_table.public_rt_1webseeker",
            "aws_subnet.public_subnet_1webseeker",
            "aws_vpc.vpc_1webseeker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webseeker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013372624309:security-group/sg-0dc10267d70a02b39",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc10267d70a02b39",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250627175849635200000001",
            "name_prefix": "terraform-",
            "owner_id": "013372624309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webseeker_sg"
            },
            "tags_all": {
              "Name": "webseeker_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce90b2d355814169"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_1webseeker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013372624309:subnet/subnet-0025f49805a52b2cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0025f49805a52b2cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013372624309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1webseeker"
            },
            "tags_all": {
              "Name": "private_subnet_1webseeker"
            },
            "vpc_id": "vpc-0ce90b2d355814169"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_1webseeker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013372624309:subnet/subnet-00c193bf4703adc2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c193bf4703adc2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013372624309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1webseeker"
            },
            "tags_all": {
              "Name": "public_subnet_1webseeker"
            },
            "vpc_id": "vpc-0ce90b2d355814169"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_1webseeker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_1webseeker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:013372624309:vpc/vpc-0ce90b2d355814169",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057b30f7b30d775f6",
            "default_route_table_id": "rtb-0be36c66ee67ba80a",
            "default_security_group_id": "sg-095a666b6aef23c7a",
            "dhcp_options_id": "dopt-034a94eb9c21d4231",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce90b2d355814169",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be36c66ee67ba80a",
            "owner_id": "013372624309",
            "tags": {
              "Name": "vpc_1webseeker"
            },
            "tags_all": {
              "Name": "vpc_1webseeker"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}